--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="0x00000000"
+        android:layout_centerHorizontal="true"
+        android:textSize="35sp"
+        android:id="@+id/txtTagId" />
 </RelativeLayout>
